145 ==> 305191 - digiKam closed when loading cameras.
146 ==> 321338 - Work on win8 x64?
147 ==> 180747 - digiKam crashes if flickr upload failed and "Start uploading" button was pressed again.
148 ==> 215647 - Opengl viewer does not work.
149 ==> 350923 - Previous Drag and Drop bug not fixed (but reportedly fixed).
150 ==> 288183 - Folder navigation/selection hangs when adding new album collection.
151 ==> 345245 - digiKam hangs on startup.
152 ==> 240140 - If I press Move Here while attempting to Drag and drop of a file, I receive an error "The file or folder xxx does not exist".
153 ==> 355196 - Crash if I transform a raw (CR2) in black & white.
154 ==> 333182 - Freezes/Hangs when resizing panes.
155 ==> 240226 - Save As feature crash the application if ~ character is inserted in the file name.
156 ==> 347672 - digikam.exe do not work.
157 ==> 344911 - Screen freezes frequently while tagging images.
158 ==> 240212 - Problem changing toolbar icons.
159 ==> 326106 - Crash on startup.
160 ==> 192257 - directory with new photo's not shown.
161 ==> 338561 - "Add Image" crashes everytime.
162 ==> 333575 - Crash on complete maintenance.
163 ==> 327781 - App crashed after first use.
164 ==> 327169 - digiKam crash during load database.
165 ==> 335814 - Failing to save a new version due to unrecognized.
166 ==> 230401 - MSVC++ Runtime error on large TIFs with layers.
167 ==> 240142 - If I press Copy Here while attempting to Drag and drop of a file, the original is deleted.
168 ==> 303992 - digiKam is closing after opening any file dialog.
169 ==> 330509 - The "properties", "captions & tags" & "colors" sidebars all cause digikam to freeze when a picture is selected.
170 ==> 262000 - Kioslave crashes during batch rename.
171 ==> 308149 - digiKam - building with KDE fails due to link files not being supported by windows.
172 ==> 240139 - If I press Cancel while attempting to Drag and drop of a file, the file is deleted from its original directory.
173 ==> 