@@ -211,4 +211,5 @@ BUGFIXES FROM KDE BUGZILLA (https://www.digikam.org/changelog):
 170 ==> 262000 - Kioslave crashes during batch rename.
 171 ==> 308149 - digiKam - building with KDE fails due to link files not being supported by windows.
 172 ==> 240139 - If I press Cancel while attempting to Drag and drop of a file, the file is deleted from its original directory.
-173 ==> 
+173 ==> 363650 - I18N_ARGUMENT_MISSING in export dialog image type selection widget.
+174 ==> 
